# ray-tracing-phong

./: .gitignore  CMakeLists.txt  README.md  config.yaml  cornell_box.yaml
source/: Hittable.h  Light.h  MeshTriangle.cpp  MeshTriangle.h  PatchMesh.cpp  PatchMesh.h  Sphere.h  TriangleMesh.cpp  TriangleMesh.h  teapotdata.h  utils.cpp  utils.h  whitted.cpp
